src/generated/FormGenParser.py
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class FormGenParser ( Parser ):

    grammarFileName = "FormGenParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'form'", "'section'", "'field'", "'on_submit'",
                     "'type'", "'label'", "'placeholder'", "'required'",
                     "'unique'", "'readonly'", "'hidden'", "'default'",
                     "'min_length'", "'max_length'", "'min'", "'max'", "'options'",
                     "'icon'", "'title'", "'theme'", "'layout'", "'size'",
                     "'submit'", "'cancel'", "'dark'", "'light'", "'primary'",
                     "'minimal'", "'stacked'", "'inline'", "'grid'", "'sm'",
                     "'md'", "'lg'", "'string'", "'email'", "'password'",
                     "'int'", "'float'", "'date'", "'boolean'", "'select'",
                     "'textarea'", "'person'", "'lock'", "'envelope'", "'phone'",
                     "'calendar'", "'search'", "'eye'", "'POST'", "'GET'",
                     "'success'", "'error'", "'redirect'", "'true'", "'false'",
                     "'='", "':'", "','", "'['", "']'", "'\\u2192'", "<INVALID>",
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>",
                     "'<INDENT>'", "'<DEDENT>'" ]

    symbolicNames = [ "<INVALID>", "FORM", "SECTION", "FIELD", "ON_SUBMIT",
                      "TYPE", "LABEL", "PLACEHOLDER", "REQUIRED", "UNIQUE",
                      "READONLY", "FIELD_HIDDEN", "DEFAULT", "MIN_LENGTH",
                      "MAX_LENGTH", "MIN", "MAX", "OPTIONS", "ICON", "TITLE",
                      "THEME", "LAYOUT", "SIZE", "SUBMIT", "CANCEL", "DARK",
                      "LIGHT", "PRIMARY", "MINIMAL", "STACKED", "INLINE",
                      "GRID", "SM", "MD", "LG", "T_STRING", "T_EMAIL", "T_PASSWORD",
                      "T_INT", "T_FLOAT", "T_DATE", "T_BOOLEAN", "T_SELECT",
                      "T_TEXTAREA", "ICON_PERSON", "ICON_LOCK", "ICON_ENVELOPE",
                      "ICON_PHONE", "ICON_CALENDAR", "ICON_SEARCH", "ICON_EYE",
                      "POST", "GET", "SUCCESS", "ERROR", "REDIRECT", "TRUE",
                      "FALSE", "EQUALS", "COLON", "COMMA", "LBRACKET", "RBRACKET",
                      "ARROW", "STRING", "INTEGER", "FLOAT", "URL_PATH",
                      "IDENTIFIER", "INDENT", "DEDENT", "NEWLINE", "WS",
                      "COMMENT" ]

    RULE_program = 0
    RULE_form_def = 1
    RULE_form_attr = 2
    RULE_theme_value = 3
    RULE_layout_value = 4
    RULE_size_value = 5
    RULE_section = 6
    RULE_field = 7
    RULE_field_prop = 8
    RULE_field_type = 9
    RULE_icon_value = 10
    RULE_option_list = 11
    RULE_value = 12
    RULE_number = 13
    RULE_boolean_val = 14
    RULE_identifier = 15
    RULE_on_submit = 16
    RULE_http_action = 17
    RULE_http_method = 18
    RULE_success_clause = 19
    RULE_error_clause = 20
    RULE_arrow_action = 21

    ruleNames =  [ "program", "form_def", "form_attr", "theme_value", "layout_value",
                   "size_value", "section", "field", "field_prop", "field_type",
                   "icon_value", "option_list", "value", "number", "boolean_val",
                   "identifier", "on_submit", "http_action", "http_method",
                   "success_clause", "error_clause", "arrow_action" ]

    EOF = Token.EOF
    FORM=1
    SECTION=2
    FIELD=3
    ON_SUBMIT=4
    TYPE=5
    LABEL=6
    PLACEHOLDER=7
    REQUIRED=8
    UNIQUE=9
    READONLY=10
    FIELD_HIDDEN=11
    DEFAULT=12
    MIN_LENGTH=13
    MAX_LENGTH=14
    MIN=15
    MAX=16
    OPTIONS=17
    ICON=18
    TITLE=19
    THEME=20
    LAYOUT=21
    SIZE=22
    SUBMIT=23
    CANCEL=24
    DARK=25
    LIGHT=26
    PRIMARY=27
    MINIMAL=28
    STACKED=29
    INLINE=30
    GRID=31
    SM=32
    MD=33
    LG=34
    T_STRING=35
    T_EMAIL=36
    T_PASSWORD=37
    T_INT=38
    T_FLOAT=39
    T_DATE=40
    T_BOOLEAN=41
    T_SELECT=42
    T_TEXTAREA=43
    ICON_PERSON=44
    ICON_LOCK=45
    ICON_ENVELOPE=46
    ICON_PHONE=47
    ICON_CALENDAR=48
    ICON_SEARCH=49
    ICON_EYE=50
    POST=51
    GET=52
    SUCCESS=53
    ERROR=54
    REDIRECT=55
    TRUE=56
    FALSE=57
    EQUALS=58
    COLON=59
    COMMA=60
    LBRACKET=61
    RBRACKET=62
    ARROW=63
    STRING=64
    INTEGER=65
    FLOAT=66
    URL_PATH=67
    IDENTIFIER=68
    INDENT=69
    DEDENT=70
    NEWLINE=71
    WS=72
    COMMENT=73

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None

    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def form_def(self):
            return self.getTypedRuleContext(FormGenParser.Form_defContext,0)

        def EOF(self):
            return self.getToken(FormGenParser.EOF, 0)

        def getRuleIndex(self):
            return FormGenParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

    def program(self):

        localctx = FormGenParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 44
            self.form_def()
            self.state = 45
            self.match(FormGenParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Form_defContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FORM(self):
            return self.getToken(FormGenParser.FORM, 0)

        def identifier(self):
            return self.getTypedRuleContext(FormGenParser.IdentifierContext,0)

        def NEWLINE(self):
            return self.getToken(FormGenParser.NEWLINE, 0)

        def INDENT(self):
            return self.getToken(FormGenParser.INDENT, 0)

        def DEDENT(self):
            return self.getToken(FormGenParser.DEDENT, 0)

        def form_attr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(FormGenParser.Form_attrContext)
            else:
                return self.getTypedRuleContext(FormGenParser.Form_attrContext,i)

        def section(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(FormGenParser.SectionContext)
            else:
                return self.getTypedRuleContext(FormGenParser.SectionContext,i)

        def on_submit(self):
            return self.getTypedRuleContext(FormGenParser.On_submitContext,0)

        def getRuleIndex(self):
            return FormGenParser.RULE_form_def

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterForm_def" ):
                listener.enterForm_def(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitForm_def" ):
                listener.exitForm_def(self)

    def form_def(self):

        localctx = FormGenParser.Form_defContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_form_def)
        self._la = 0
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 47
            self.match(FormGenParser.FORM)
            self.state = 48
            self.identifier()
            self.state = 50
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 49
                self.form_attr()
                self.state = 52
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 33030144) != 0)):
                    break

            self.state = 54
            self.match(FormGenParser.NEWLINE)
            self.state = 55
            self.match(FormGenParser.INDENT)
            self.state = 57
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 56
                self.section()
                self.state = 59
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==2):
                    break

            self.state = 62
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==4:
                self.state = 61
                self.on_submit()

            self.state = 64
            self.match(FormGenParser.DEDENT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Form_attrContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TITLE(self):
            return self.getToken(FormGenParser.TITLE, 0)

        def EQUALS(self):
            return self.getToken(FormGenParser.EQUALS, 0)

        def STRING(self):
            return self.getToken(FormGenParser.STRING, 0)

        def THEME(self):
            return self.getToken(FormGenParser.THEME, 0)

        def theme_value(self):
            return self.getTypedRuleContext(FormGenParser.Theme_valueContext,0)

        def SUBMIT(self):
            return self.getToken(FormGenParser.SUBMIT, 0)

        def CANCEL(self):
            return self.getToken(FormGenParser.CANCEL, 0)

        def LAYOUT(self):
            return self.getToken(FormGenParser.LAYOUT, 0)

        def layout_value(self):
            return self.getTypedRuleContext(FormGenParser.Layout_valueContext,0)

        def SIZE(self):
            return self.getToken(FormGenParser.SIZE, 0)

        def size_value(self):
            return self.getTypedRuleContext(FormGenParser.Size_valueContext,0)

        def getRuleIndex(self):
            return FormGenParser.RULE_form_attr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterForm_attr" ):
                listener.enterForm_attr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitForm_attr" ):
                listener.exitForm_attr(self)

    def form_attr(self):

        localctx = FormGenParser.Form_attrContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_form_attr)
        try:
            self.state = 84
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [19]:
                self.enterOuterAlt(localctx, 1)
                self.state = 66
                self.match(FormGenParser.TITLE)
                self.state = 67
                self.match(FormGenParser.EQUALS)
                self.state = 68
                self.match(FormGenParser.STRING)
                pass
            elif token in [20]:
                self.enterOuterAlt(localctx, 2)
                self.state = 69
                self.match(FormGenParser.THEME)
                self.state = 70
                self.match(FormGenParser.EQUALS)
                self.state = 71
                self.theme_value()
                pass
            elif token in [23]:
                self.enterOuterAlt(localctx, 3)
                self.state = 72
                self.match(FormGenParser.SUBMIT)
                self.state = 73
                self.match(FormGenParser.EQUALS)
                self.state = 74
                self.match(FormGenParser.STRING)
                pass
            elif token in [24]:
                self.enterOuterAlt(localctx, 4)
                self.state = 75
                self.match(FormGenParser.CANCEL)
                self.state = 76
                self.match(FormGenParser.EQUALS)
                self.state = 77
                self.match(FormGenParser.STRING)
                pass
            elif token in [21]:
                self.enterOuterAlt(localctx, 5)
                self.state = 78
                self.match(FormGenParser.LAYOUT)
                self.state = 79
                self.match(FormGenParser.EQUALS)
                self.state = 80
                self.layout_value()
                pass
            elif token in [22]:
                self.enterOuterAlt(localctx, 6)
                self.state = 81
                self.match(FormGenParser.SIZE)
                self.state = 82
                self.match(FormGenParser.EQUALS)
                self.state = 83
                self.size_value()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Theme_valueContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DARK(self):
            return self.getToken(FormGenParser.DARK, 0)

        def LIGHT(self):
            return self.getToken(FormGenParser.LIGHT, 0)

        def PRIMARY(self):
            return self.getToken(FormGenParser.PRIMARY, 0)

        def MINIMAL(self):
            return self.getToken(FormGenParser.MINIMAL, 0)

        def STRING(self):
            return self.getToken(FormGenParser.STRING, 0)

        def getRuleIndex(self):
            return FormGenParser.RULE_theme_value

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTheme_value" ):
                listener.enterTheme_value(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTheme_value" ):
                listener.exitTheme_value(self)

    def theme_value(self):

        localctx = FormGenParser.Theme_valueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_theme_value)
        self._la = 0
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 86
            _la = self._input.LA(1)
            if not(((((_la - 25)) & ~0x3f) == 0 and ((1 << (_la - 25)) & 549755813903) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Layout_valueContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STACKED(self):
            return self.getToken(FormGenParser.STACKED, 0)

        def INLINE(self):
            return self.getToken(FormGenParser.INLINE, 0)

        def GRID(self):
            return self.getToken(FormGenParser.GRID, 0)

        def STRING(self):
            return self.getToken(FormGenParser.STRING, 0)

        def getRuleIndex(self):
            return FormGenParser.RULE_layout_value

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLayout_value" ):
                listener.enterLayout_value(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLayout_value" ):
                listener.exitLayout_value(self)

    def layout_value(self):

        localctx = FormGenParser.Layout_valueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_layout_value)
        self._la = 0
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 88
            _la = self._input.LA(1)
            if not(((((_la - 29)) & ~0x3f) == 0 and ((1 << (_la - 29)) & 34359738375) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Size_valueContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SM(self):
            return self.getToken(FormGenParser.SM, 0)

        def MD(self):
            return self.getToken(FormGenParser.MD, 0)

        def LG(self):
            return self.getToken(FormGenParser.LG, 0)

        def STRING(self):
            return self.getToken(FormGenParser.STRING, 0)

        def getRuleIndex(self):
            return FormGenParser.RULE_size_value

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSize_value" ):
                listener.enterSize_value(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSize_value" ):
                listener.exitSize_value(self)

    def size_value(self):

        localctx = FormGenParser.Size_valueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_size_value)
        self._la = 0
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 90
            _la = self._input.LA(1)
            if not(((((_la - 32)) & ~0x3f) == 0 and ((1 << (_la - 32)) & 4294967303) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class SectionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SECTION(self):
            return self.getToken(FormGenParser.SECTION, 0)

        def identifier(self):
            return self.getTypedRuleContext(FormGenParser.IdentifierContext,0)

        def NEWLINE(self):
            return self.getToken(FormGenParser.NEWLINE, 0)

        def INDENT(self):
            return self.getToken(FormGenParser.INDENT, 0)

        def DEDENT(self):
            return self.getToken(FormGenParser.DEDENT, 0)

        def field(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(FormGenParser.FieldContext)
            else:
                return self.getTypedRuleContext(FormGenParser.FieldContext,i)

        def getRuleIndex(self):
            return FormGenParser.RULE_section

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSection" ):
                listener.enterSection(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSection" ):
                listener.exitSection(self)

    def section(self):

        localctx = FormGenParser.SectionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_section)
        self._la = 0
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 92
            self.match(FormGenParser.SECTION)
            self.state = 93
            self.identifier()
            self.state = 94
            self.match(FormGenParser.NEWLINE)
            self.state = 95
            self.match(FormGenParser.INDENT)
            self.state = 97
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 96
                self.field()
                self.state = 99
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==3):
                    break

            self.state = 101
            self.match(FormGenParser.DEDENT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class FieldContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FIELD(self):
            return self.getToken(FormGenParser.FIELD, 0)

        def identifier(self):
            return self.getTypedRuleContext(FormGenParser.IdentifierContext,0)

        def NEWLINE(self):
            return self.getToken(FormGenParser.NEWLINE, 0)

        def INDENT(self):
            return self.getToken(FormGenParser.INDENT, 0)

        def DEDENT(self):
            return self.getToken(FormGenParser.DEDENT, 0)

        def field_prop(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(FormGenParser.Field_propContext)
            else:
                return self.getTypedRuleContext(FormGenParser.Field_propContext,i)

        def getRuleIndex(self):
            return FormGenParser.RULE_field

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterField" ):
                listener.enterField(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitField" ):
                listener.exitField(self)

    def field(self):

        localctx = FormGenParser.FieldContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_field)
        self._la = 0
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 103
            self.match(FormGenParser.FIELD)
            self.state = 104
            self.identifier()
            self.state = 105
            self.match(FormGenParser.NEWLINE)
            self.state = 106
            self.match(FormGenParser.INDENT)
            self.state = 108
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 107
                self.field_prop()
                self.state = 110
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 524256) != 0)):
                    break

            self.state = 112
            self.match(FormGenParser.DEDENT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Field_propContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TYPE(self):
            return self.getToken(FormGenParser.TYPE, 0)

        def COLON(self):
            return self.getToken(FormGenParser.COLON, 0)

        def field_type(self):
            return self.getTypedRuleContext(FormGenParser.Field_typeContext,0)

        def NEWLINE(self):
            return self.getToken(FormGenParser.NEWLINE, 0)

        def LABEL(self):
            return self.getToken(FormGenParser.LABEL, 0)

        def STRING(self):
            return self.getToken(FormGenParser.STRING, 0)

        def PLACEHOLDER(self):
            return self.getToken(FormGenParser.PLACEHOLDER, 0)

        def REQUIRED(self):
            return self.getToken(FormGenParser.REQUIRED, 0)

        def UNIQUE(self):
            return self.getToken(FormGenParser.UNIQUE, 0)

        def boolean_val(self):
            return self.getTypedRuleContext(FormGenParser.Boolean_valContext,0)

        def READONLY(self):
            return self.getToken(FormGenParser.READONLY, 0)

        def FIELD_HIDDEN(self):
            return self.getToken(FormGenParser.FIELD_HIDDEN, 0)

        def DEFAULT(self):
            return self.getToken(FormGenParser.DEFAULT, 0)

        def value(self):
            return self.getTypedRuleContext(FormGenParser.ValueContext,0)

        def MIN_LENGTH(self):
            return self.getToken(FormGenParser.MIN_LENGTH, 0)

        def INTEGER(self):
            return self.getToken(FormGenParser.INTEGER, 0)

        def MAX_LENGTH(self):
            return self.getToken(FormGenParser.MAX_LENGTH, 0)

        def MIN(self):
            return self.getToken(FormGenParser.MIN, 0)

        def number(self):
            return self.getTypedRuleContext(FormGenParser.NumberContext,0)

        def MAX(self):
            return self.getToken(FormGenParser.MAX, 0)

        def OPTIONS(self):
            return self.getToken(FormGenParser.OPTIONS, 0)

        def option_list(self):
            return self.getTypedRuleContext(FormGenParser.Option_listContext,0)

        def ICON(self):
            return self.getToken(FormGenParser.ICON, 0)

        def icon_value(self):
            return self.getTypedRuleContext(FormGenParser.Icon_valueContext,0)

        def getRuleIndex(self):
            return FormGenParser.RULE_field_prop

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterField_prop" ):
                listener.enterField_prop(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitField_prop" ):
                listener.exitField_prop(self)

    def field_prop(self):

        localctx = FormGenParser.Field_propContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_field_prop)
        try:
            self.state = 171
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [5]:
                self.enterOuterAlt(localctx, 1)
                self.state = 114
                self.match(FormGenParser.TYPE)
                self.state = 115
                self.match(FormGenParser.COLON)
                self.state = 116
                self.field_type()
                self.state = 117
                self.match(FormGenParser.NEWLINE)
                pass
            elif token in [6]:
                self.enterOuterAlt(localctx, 2)
                self.state = 119
                self.match(FormGenParser.LABEL)
                self.state = 120
                self.match(FormGenParser.COLON)
                self.state = 121
                self.match(FormGenParser.STRING)
                self.state = 122
                self.match(FormGenParser.NEWLINE)
                pass
            elif token in [7]:
                self.enterOuterAlt(localctx, 3)
                self.state = 123
                self.match(FormGenParser.PLACEHOLDER)
                self.state = 124
                self.match(FormGenParser.COLON)
                self.state = 125
                self.match(FormGenParser.STRING)
                self.state = 126
                self.match(FormGenParser.NEWLINE)
                pass
            elif token in [8]:
                self.enterOuterAlt(localctx, 4)
                self.state = 127
                self.match(FormGenParser.REQUIRED)
                self.state = 128
                self.match(FormGenParser.NEWLINE)
                pass
            elif token in [9]:
                self.enterOuterAlt(localctx, 5)
                self.state = 129
                self.match(FormGenParser.UNIQUE)
                self.state = 130
                self.match(FormGenParser.COLON)
                self.state = 131
                self.boolean_val()
                self.state = 132
                self.match(FormGenParser.NEWLINE)
                pass
            elif token in [10]:
                self.enterOuterAlt(localctx, 6)
                self.state = 134
                self.match(FormGenParser.READONLY)
                self.state = 135
                self.match(FormGenParser.NEWLINE)
                pass
            elif token in [11]:
                self.enterOuterAlt(localctx, 7)
                self.state = 136
                self.match(FormGenParser.FIELD_HIDDEN)
                self.state = 137
                self.match(FormGenParser.NEWLINE)
                pass
            elif token in [12]:
                self.enterOuterAlt(localctx, 8)
                self.state = 138
                self.match(FormGenParser.DEFAULT)
                self.state = 139
                self.match(FormGenParser.COLON)
                self.state = 140
                self.value()
                self.state = 141
                self.match(FormGenParser.NEWLINE)
                pass
            elif token in [13]:
                self.enterOuterAlt(localctx, 9)
                self.state = 143
                self.match(FormGenParser.MIN_LENGTH)
                self.state = 144
                self.match(FormGenParser.COLON)
                self.state = 145
                self.match(FormGenParser.INTEGER)
                self.state = 146
                self.match(FormGenParser.NEWLINE)
                pass
            elif token in [14]:
                self.enterOuterAlt(localctx, 10)
                self.state = 147
                self.match(FormGenParser.MAX_LENGTH)
                self.state = 148
                self.match(FormGenParser.COLON)
                self.state = 149
                self.match(FormGenParser.INTEGER)
                self.state = 150
                self.match(FormGenParser.NEWLINE)
                pass
            elif token in [15]:
                self.enterOuterAlt(localctx, 11)
                self.state = 151
                self.match(FormGenParser.MIN)
                self.state = 152
                self.match(FormGenParser.COLON)
                self.state = 153
                self.number()
                self.state = 154
                self.match(FormGenParser.NEWLINE)
                pass
            elif token in [16]:
                self.enterOuterAlt(localctx, 12)
                self.state = 156
                self.match(FormGenParser.MAX)
                self.state = 157
                self.match(FormGenParser.COLON)
                self.state = 158
                self.number()
                self.state = 159
                self.match(FormGenParser.NEWLINE)
                pass
            elif token in [17]:
                self.enterOuterAlt(localctx, 13)
                self.state = 161
                self.match(FormGenParser.OPTIONS)
                self.state = 162
                self.match(FormGenParser.COLON)
                self.state = 163
                self.option_list()
                self.state = 164
                self.match(FormGenParser.NEWLINE)
                pass
            elif token in [18]:
                self.enterOuterAlt(localctx, 14)
                self.state = 166
                self.match(FormGenParser.ICON)
                self.state = 167
                self.match(FormGenParser.COLON)
                self.state = 168
                self.icon_value()
                self.state = 169
                self.match(FormGenParser.NEWLINE)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Field_typeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def T_STRING(self):
            return self.getToken(FormGenParser.T_STRING, 0)

        def T_EMAIL(self):
            return self.getToken(FormGenParser.T_EMAIL, 0)

        def T_PASSWORD(self):
            return self.getToken(FormGenParser.T_PASSWORD, 0)

        def T_INT(self):
            return self.getToken(FormGenParser.T_INT, 0)

        def T_FLOAT(self):
            return self.getToken(FormGenParser.T_FLOAT, 0)

        def T_DATE(self):
            return self.getToken(FormGenParser.T_DATE, 0)

        def T_BOOLEAN(self):
            return self.getToken(FormGenParser.T_BOOLEAN, 0)

        def T_SELECT(self):
            return self.getToken(FormGenParser.T_SELECT, 0)

        def T_TEXTAREA(self):
            return self.getToken(FormGenParser.T_TEXTAREA, 0)

        def getRuleIndex(self):
            return FormGenParser.RULE_field_type

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterField_type" ):
                listener.enterField_type(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitField_type" ):
                listener.exitField_type(self)

    def field_type(self):
